Update ait melloul Prediction Version final.ipynb

--- a/ait melloul Prediction Version final.ipynb
+++ b/ait melloul Prediction Version final.ipynb
@@ -50,8 +50,8 @@
    "source": [
     "\n",
     "# reading xlsx file\n",
-    "df_RH=pd.read_excel(\"C:/Users/abdbe/Documents/Article ait melloul/RH101W.xlsx\")\n",
-    "df_ZI=pd.read_excel(\"C:/Users/abdbe/Documents/Article ait melloul/ZI101W.xlsx\")"
+    "df_RH=pd.read_excel(\"RH101W.xlsx\")\n",
+    "df_ZI=pd.read_excel(\"ZI101W.xlsx\")"
    ]
   },
   {
